# rust-frontend-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  webpack.common.js  webpack.dev.js
.github/workflows/: nodejs.yml
src/: app.rs  lib.rs
src/component/: about.rs  index.rs
static/: index.html  server.js
