[package]
name = "rust-frontend-template"
version = "0.1.0"
authors = ["Example Developer <developer@example.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

publish = false

readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "^0.4.8"
wasm-bindgen = "^0.2.60"
web_logger = "^0.2"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.web-sys]
version = "^0.3.4"

[dependencies.wee_alloc]
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
version = "^0.4.4"
optional = true

[dependencies.yew]
version = "^0.14.3"
features = [
    "web_sys"
]

[dependencies.yew-router]
version = "^0.11.0"
features = [
    "web_sys"
]

[dev-dependencies]
wasm-bindgen-test = "^0.2"
